# lsbin

./: .clangd  .gitignore  LICENSE  LICENSE.md  Makefile  README.md  lsbin  meson.build  readme
include/: args.h  file.h  lelf.h  macho.h  mag.h  mains.h  pe32.h  printr.h
include/formats/: macho.h
lib/: meson.build
lib/lsbin_fmt/: meson.build
lib/lsbin_fmt/include/: file.h
lib/lsbin_fmt/src/: file.cc
src/: args.cc  elf32_main.cc  elf64_main.cc  elf_main.cc  file.cc  image.cc  macho_main.cc  main.cc  output.cc  output_main.cc  pe_main.cc
src/formats/: elf32.cc  elf64.cc  macho.cc  pe.cc
tests/: config.h.in  elf_test.cc  fatmacho_test.cc  macho_test.cc  meson.build  pe_test.cc  test_lib.cc  test_lib.h
tests/files/: a.elf  a.fat_macho
